[workspace]
members = ["engine_core", "game_sample", "launcher"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
winit = "0.30"
wgpu = "0.20"
pollster = "0.3"
log = "0.4"
env_logger = "0.11"
# Add later:
# glam = "0.29"
# hecs = "0.10"
# egui = "0.29"
# egui-winit = "0.29"
# egui-wgpu = "0.29"
# rodio = "0.17"
# serde = { version = "1", features = ["derive"] }
