[package]
name = "engine_core"
version = "0.1.0"
edition = "2024"

[lib]
create-type = ["rlib"]

[dependencies]
anyhow = { workspace = true }
winit = { workspace = true, features = ["rwh_06"] }
wgpu = { workspace = true }
pollster = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }